# biznews-mailchimp

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml  main.yaml
db/: bigquery.py
mailchimp/: coffeehr_service.py  export_pipeline_service.py  export_service.py  member_service.py  operations.py  pipeline_service.py  primary_pipeline_service.py  primary_service.py  repo.py  secondary_pipeline_service.py  tertiary_pipeline_service.py  test_coffeehr_service.py  test_pipeline_service.py  test_repo.py  test_service.py  utils.py  webhook_service.py
mailchimp/pipeline/: __init__.py  activities.py  departments.py  employees.py  export_pipeline_service.py  primary_pipeline_service.py  test_pipeline_service.py
tasks/: cloud_tasks.py
