[tool.poetry]
name = "biznews-mailchimp"
version = "1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^3.3.2"
httpx = "^0.23.0"
compose = "^1.4.8"
mailchimp-marketing = "^3.0.75"
pandas = "^1.4.4"
numpy = "^1.23.2"
google-cloud-tasks = "^2.10.2"
google-auth = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
mypy = "^0.971"
types-protobuf = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
